<resources>
    <string name="app_name">食べ食べ アンパンサーチ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="shop_image_description">店舗画像</string>
    <string name="label_address">住所</string>
    <string name="label_open_hours">営業時間</string>
    <string name="btn_open_url">ホットペッパーで詳細を見る</string>
    <string name="btn_open_map">地図で見る</string>

</resources>